Analisis Sintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    CALLMETHOD
    CASE
    CHARACTER
    CLASS
    COMMENT
    CONTINUE
    DEFAULT
    DICTIONARYTYPE
    ENUM
    FALSE
    FOR
    GUARD
    IMPORT
    IN
    INIT
    MINUSONE
    NUMBER
    OPTIONALVARIABLE
    PLUSONE
    PRIVATE
    PUBLIC
    RANGE
    REPEAT
    SET
    SETVARIABLE
    STATIC
    STRUCT
    SWITCH
    TRUE
    TYPEALIAS
    VALUESTYPE
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment_statement
Rule 5     statement -> print_statement
Rule 6     statement -> if_statement
Rule 7     statement -> function_declaration
Rule 8     assignment_statement -> variable_declarator VARIABLE ASSIGN expression
Rule 9     assignment_statement -> variable_declarator VARIABLE COLON data_collection_type ASSIGN collection_block
Rule 10    collection_block -> LSQUAREBRACKET expression RSQUAREBRACKET
Rule 11    print_statement -> PRINT LPAREN expression RPAREN
Rule 12    if_statement -> IF LPAREN expression RPAREN LBRACES statements RBRACES
Rule 13    if_statement -> IF LPAREN expression RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES
Rule 14    function_declaration -> FUNC VARIABLE LPAREN function_parameters RPAREN function_return_type LBRACES expression return_statement RBRACES
Rule 15    function_parameters -> function_parameters COMMA VARIABLE COLON data_type
Rule 16    function_parameters -> VARIABLE COLON data_type
Rule 17    function_parameters -> empty
Rule 18    function_return_type -> ARROW data_type
Rule 19    function_return_type -> empty
Rule 20    return_statement -> RETURN expression
Rule 21    variable_declarator -> LET
Rule 22    variable_declarator -> VAR
Rule 23    data_type -> INTEGER
Rule 24    data_type -> STRING
Rule 25    data_type -> BOOLEAN
Rule 26    data_type -> DOUBLE
Rule 27    data_type -> FLOAT
Rule 28    data_type -> INT
Rule 29    data_collection_type -> COLLECTIONTYPE
Rule 30    break_statement -> BREAK
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression MINUS expression
Rule 33    expression -> expression MULTIPLY expression
Rule 34    expression -> expression DIVIDE expression
Rule 35    expression -> expression GREATERTHAN expression
Rule 36    expression -> expression LESSTHAN expression
Rule 37    expression -> expression EQUALS expression
Rule 38    expression -> expression NOTEQUALS expression
Rule 39    expression -> expression AND expression
Rule 40    expression -> expression OR expression
Rule 41    expression -> expression COMMA expression
Rule 42    expression -> LPAREN expression RPAREN
Rule 43    expression -> NOT expression
Rule 44    expression -> VARIABLE
Rule 45    expression -> type
Rule 46    expression -> function_call
Rule 47    expression -> empty
Rule 48    type -> BOOL
Rule 49    type -> DECIMAL
Rule 50    type -> WSTRING
Rule 51    function_call -> VARIABLE LPAREN function_arguments RPAREN
Rule 52    function_arguments -> function_arguments COMMA expression
Rule 53    function_arguments -> expression
Rule 54    function_arguments -> empty
Rule 55    empty -> <empty>

Terminals, with rules where they appear

AND                  : 39
ARRAY                : 
ARROW                : 18
ASSIGN               : 8 9
BOOL                 : 48
BOOLEAN              : 25
BREAK                : 30
CALLMETHOD           : 
CASE                 : 
CHARACTER            : 
CLASS                : 
COLLECTIONTYPE       : 29
COLON                : 9 15 16
COMMA                : 15 41 52
COMMENT              : 
CONTINUE             : 
DECIMAL              : 49
DEFAULT              : 
DICTIONARYTYPE       : 
DIVIDE               : 34
DOUBLE               : 26
ELSE                 : 13
ENUM                 : 
EQUALS               : 37
FALSE                : 
FLOAT                : 27
FOR                  : 
FUNC                 : 14
GREATERTHAN          : 35
GUARD                : 
IF                   : 12 13
IMPORT               : 
IN                   : 
INIT                 : 
INT                  : 28
INTEGER              : 23
LBRACES              : 12 13 13 14
LESSTHAN             : 36
LET                  : 21
LPAREN               : 11 12 13 14 42 51
LSQUAREBRACKET       : 10
MINUS                : 32
MINUSONE             : 
MULTIPLY             : 33
NOT                  : 43
NOTEQUALS            : 38
NUMBER               : 
OPTIONALVARIABLE     : 
OR                   : 40
PLUS                 : 31
PLUSONE              : 
PRINT                : 11
PRIVATE              : 
PUBLIC               : 
RANGE                : 
RBRACES              : 12 13 13 14
REPEAT               : 
RETURN               : 20
RPAREN               : 11 12 13 14 42 51
RSQUAREBRACKET       : 10
SET                  : 
SETVARIABLE          : 
STATIC               : 
STRING               : 24
STRUCT               : 
SWITCH               : 
TRUE                 : 
TYPEALIAS            : 
VALUESTYPE           : 
VAR                  : 22
VARIABLE             : 8 9 14 15 16 44 51
WHILE                : 
WSTRING              : 50
error                : 

Nonterminals, with rules where they appear

assignment_statement : 4
break_statement      : 
collection_block     : 9
data_collection_type : 9
data_type            : 15 16 18
empty                : 17 19 47 54
expression           : 8 10 11 12 13 14 20 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 43 52 53
function_arguments   : 51 52
function_call        : 46
function_declaration : 7
function_parameters  : 14 15
function_return_type : 14
if_statement         : 6
print_statement      : 5
program              : 0
return_statement     : 14
statement            : 2 3
statements           : 1 2 12 13 13
type                 : 45
variable_declarator  : 8 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment_statement
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . function_declaration
    (8) assignment_statement -> . variable_declarator VARIABLE ASSIGN expression
    (9) assignment_statement -> . variable_declarator VARIABLE COLON data_collection_type ASSIGN collection_block
    (11) print_statement -> . PRINT LPAREN expression RPAREN
    (12) if_statement -> . IF LPAREN expression RPAREN LBRACES statements RBRACES
    (13) if_statement -> . IF LPAREN expression RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES
    (14) function_declaration -> . FUNC VARIABLE LPAREN function_parameters RPAREN function_return_type LBRACES expression return_statement RBRACES
    (21) variable_declarator -> . LET
    (22) variable_declarator -> . VAR

    PRINT           shift and go to state 9
    IF              shift and go to state 10
    FUNC            shift and go to state 11
    LET             shift and go to state 12
    VAR             shift and go to state 13

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment_statement           shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    function_declaration           shift and go to state 7
    variable_declarator            shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment_statement
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . function_declaration
    (8) assignment_statement -> . variable_declarator VARIABLE ASSIGN expression
    (9) assignment_statement -> . variable_declarator VARIABLE COLON data_collection_type ASSIGN collection_block
    (11) print_statement -> . PRINT LPAREN expression RPAREN
    (12) if_statement -> . IF LPAREN expression RPAREN LBRACES statements RBRACES
    (13) if_statement -> . IF LPAREN expression RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES
    (14) function_declaration -> . FUNC VARIABLE LPAREN function_parameters RPAREN function_return_type LBRACES expression return_statement RBRACES
    (21) variable_declarator -> . LET
    (22) variable_declarator -> . VAR

    $end            reduce using rule 1 (program -> statements .)
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    FUNC            shift and go to state 11
    LET             shift and go to state 12
    VAR             shift and go to state 13

    statement                      shift and go to state 14
    assignment_statement           shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    function_declaration           shift and go to state 7
    variable_declarator            shift and go to state 8

state 3

    (3) statements -> statement .

    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    FUNC            reduce using rule 3 (statements -> statement .)
    LET             reduce using rule 3 (statements -> statement .)
    VAR             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACES         reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment_statement .

    PRINT           reduce using rule 4 (statement -> assignment_statement .)
    IF              reduce using rule 4 (statement -> assignment_statement .)
    FUNC            reduce using rule 4 (statement -> assignment_statement .)
    LET             reduce using rule 4 (statement -> assignment_statement .)
    VAR             reduce using rule 4 (statement -> assignment_statement .)
    $end            reduce using rule 4 (statement -> assignment_statement .)
    RBRACES         reduce using rule 4 (statement -> assignment_statement .)


state 5

    (5) statement -> print_statement .

    PRINT           reduce using rule 5 (statement -> print_statement .)
    IF              reduce using rule 5 (statement -> print_statement .)
    FUNC            reduce using rule 5 (statement -> print_statement .)
    LET             reduce using rule 5 (statement -> print_statement .)
    VAR             reduce using rule 5 (statement -> print_statement .)
    $end            reduce using rule 5 (statement -> print_statement .)
    RBRACES         reduce using rule 5 (statement -> print_statement .)


state 6

    (6) statement -> if_statement .

    PRINT           reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    FUNC            reduce using rule 6 (statement -> if_statement .)
    LET             reduce using rule 6 (statement -> if_statement .)
    VAR             reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACES         reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> function_declaration .

    PRINT           reduce using rule 7 (statement -> function_declaration .)
    IF              reduce using rule 7 (statement -> function_declaration .)
    FUNC            reduce using rule 7 (statement -> function_declaration .)
    LET             reduce using rule 7 (statement -> function_declaration .)
    VAR             reduce using rule 7 (statement -> function_declaration .)
    $end            reduce using rule 7 (statement -> function_declaration .)
    RBRACES         reduce using rule 7 (statement -> function_declaration .)


state 8

    (8) assignment_statement -> variable_declarator . VARIABLE ASSIGN expression
    (9) assignment_statement -> variable_declarator . VARIABLE COLON data_collection_type ASSIGN collection_block

    VARIABLE        shift and go to state 15


state 9

    (11) print_statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 16


state 10

    (12) if_statement -> IF . LPAREN expression RPAREN LBRACES statements RBRACES
    (13) if_statement -> IF . LPAREN expression RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES

    LPAREN          shift and go to state 17


state 11

    (14) function_declaration -> FUNC . VARIABLE LPAREN function_parameters RPAREN function_return_type LBRACES expression return_statement RBRACES

    VARIABLE        shift and go to state 18


state 12

    (21) variable_declarator -> LET .

    VARIABLE        reduce using rule 21 (variable_declarator -> LET .)


state 13

    (22) variable_declarator -> VAR .

    VARIABLE        reduce using rule 22 (variable_declarator -> VAR .)


state 14

    (2) statements -> statements statement .

    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    FUNC            reduce using rule 2 (statements -> statements statement .)
    LET             reduce using rule 2 (statements -> statements statement .)
    VAR             reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACES         reduce using rule 2 (statements -> statements statement .)


state 15

    (8) assignment_statement -> variable_declarator VARIABLE . ASSIGN expression
    (9) assignment_statement -> variable_declarator VARIABLE . COLON data_collection_type ASSIGN collection_block

    ASSIGN          shift and go to state 19
    COLON           shift and go to state 20


state 16

    (11) print_statement -> PRINT LPAREN . expression RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression LESSTHAN expression
    (37) expression -> . expression EQUALS expression
    (38) expression -> . expression NOTEQUALS expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression COMMA expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . NOT expression
    (44) expression -> . VARIABLE
    (45) expression -> . type
    (46) expression -> . function_call
    (47) expression -> . empty
    (48) type -> . BOOL
    (49) type -> . DECIMAL
    (50) type -> . WSTRING
    (51) function_call -> . VARIABLE LPAREN function_arguments RPAREN
    (55) empty -> .

    LPAREN          shift and go to state 21
    NOT             shift and go to state 23
    VARIABLE        shift and go to state 24
    BOOL            shift and go to state 28
    DECIMAL         shift and go to state 29
    WSTRING         shift and go to state 30
    RPAREN          reduce using rule 55 (empty -> .)
    PLUS            reduce using rule 55 (empty -> .)
    MINUS           reduce using rule 55 (empty -> .)
    MULTIPLY        reduce using rule 55 (empty -> .)
    DIVIDE          reduce using rule 55 (empty -> .)
    GREATERTHAN     reduce using rule 55 (empty -> .)
    LESSTHAN        reduce using rule 55 (empty -> .)
    EQUALS          reduce using rule 55 (empty -> .)
    NOTEQUALS       reduce using rule 55 (empty -> .)
    AND             reduce using rule 55 (empty -> .)
    OR              reduce using rule 55 (empty -> .)
    COMMA           reduce using rule 55 (empty -> .)

    expression                     shift and go to state 22
    type                           shift and go to state 25
    function_call                  shift and go to state 26
    empty                          shift and go to state 27

state 17

    (12) if_statement -> IF LPAREN . expression RPAREN LBRACES statements RBRACES
    (13) if_statement -> IF LPAREN . expression RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression LESSTHAN expression
    (37) expression -> . expression EQUALS expression
    (38) expression -> . expression NOTEQUALS expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression COMMA expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . NOT expression
    (44) expression -> . VARIABLE
    (45) expression -> . type
    (46) expression -> . function_call
    (47) expression -> . empty
    (48) type -> . BOOL
    (49) type -> . DECIMAL
    (50) type -> . WSTRING
    (51) function_call -> . VARIABLE LPAREN function_arguments RPAREN
    (55) empty -> .

    LPAREN          shift and go to state 21
    NOT             shift and go to state 23
    VARIABLE        shift and go to state 24
    BOOL            shift and go to state 28
    DECIMAL         shift and go to state 29
    WSTRING         shift and go to state 30
    RPAREN          reduce using rule 55 (empty -> .)
    PLUS            reduce using rule 55 (empty -> .)
    MINUS           reduce using rule 55 (empty -> .)
    MULTIPLY        reduce using rule 55 (empty -> .)
    DIVIDE          reduce using rule 55 (empty -> .)
    GREATERTHAN     reduce using rule 55 (empty -> .)
    LESSTHAN        reduce using rule 55 (empty -> .)
    EQUALS          reduce using rule 55 (empty -> .)
    NOTEQUALS       reduce using rule 55 (empty -> .)
    AND             reduce using rule 55 (empty -> .)
    OR              reduce using rule 55 (empty -> .)
    COMMA           reduce using rule 55 (empty -> .)

    expression                     shift and go to state 31
    type                           shift and go to state 25
    function_call                  shift and go to state 26
    empty                          shift and go to state 27

state 18

    (14) function_declaration -> FUNC VARIABLE . LPAREN function_parameters RPAREN function_return_type LBRACES expression return_statement RBRACES

    LPAREN          shift and go to state 32


state 19

    (8) assignment_statement -> variable_declarator VARIABLE ASSIGN . expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression LESSTHAN expression
    (37) expression -> . expression EQUALS expression
    (38) expression -> . expression NOTEQUALS expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression COMMA expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . NOT expression
    (44) expression -> . VARIABLE
    (45) expression -> . type
    (46) expression -> . function_call
    (47) expression -> . empty
    (48) type -> . BOOL
    (49) type -> . DECIMAL
    (50) type -> . WSTRING
    (51) function_call -> . VARIABLE LPAREN function_arguments RPAREN
    (55) empty -> .

    LPAREN          shift and go to state 21
    NOT             shift and go to state 23
    VARIABLE        shift and go to state 24
    BOOL            shift and go to state 28
    DECIMAL         shift and go to state 29
    WSTRING         shift and go to state 30
    PLUS            reduce using rule 55 (empty -> .)
    MINUS           reduce using rule 55 (empty -> .)
    MULTIPLY        reduce using rule 55 (empty -> .)
    DIVIDE          reduce using rule 55 (empty -> .)
    GREATERTHAN     reduce using rule 55 (empty -> .)
    LESSTHAN        reduce using rule 55 (empty -> .)
    EQUALS          reduce using rule 55 (empty -> .)
    NOTEQUALS       reduce using rule 55 (empty -> .)
    AND             reduce using rule 55 (empty -> .)
    OR              reduce using rule 55 (empty -> .)
    COMMA           reduce using rule 55 (empty -> .)
    PRINT           reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    FUNC            reduce using rule 55 (empty -> .)
    LET             reduce using rule 55 (empty -> .)
    VAR             reduce using rule 55 (empty -> .)
    $end            reduce using rule 55 (empty -> .)
    RBRACES         reduce using rule 55 (empty -> .)

    expression                     shift and go to state 33
    type                           shift and go to state 25
    function_call                  shift and go to state 26
    empty                          shift and go to state 27

state 20

    (9) assignment_statement -> variable_declarator VARIABLE COLON . data_collection_type ASSIGN collection_block
    (29) data_collection_type -> . COLLECTIONTYPE

    COLLECTIONTYPE  shift and go to state 35

    data_collection_type           shift and go to state 34

state 21

    (42) expression -> LPAREN . expression RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression LESSTHAN expression
    (37) expression -> . expression EQUALS expression
    (38) expression -> . expression NOTEQUALS expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression COMMA expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . NOT expression
    (44) expression -> . VARIABLE
    (45) expression -> . type
    (46) expression -> . function_call
    (47) expression -> . empty
    (48) type -> . BOOL
    (49) type -> . DECIMAL
    (50) type -> . WSTRING
    (51) function_call -> . VARIABLE LPAREN function_arguments RPAREN
    (55) empty -> .

    LPAREN          shift and go to state 21
    NOT             shift and go to state 23
    VARIABLE        shift and go to state 24
    BOOL            shift and go to state 28
    DECIMAL         shift and go to state 29
    WSTRING         shift and go to state 30
    RPAREN          reduce using rule 55 (empty -> .)
    PLUS            reduce using rule 55 (empty -> .)
    MINUS           reduce using rule 55 (empty -> .)
    MULTIPLY        reduce using rule 55 (empty -> .)
    DIVIDE          reduce using rule 55 (empty -> .)
    GREATERTHAN     reduce using rule 55 (empty -> .)
    LESSTHAN        reduce using rule 55 (empty -> .)
    EQUALS          reduce using rule 55 (empty -> .)
    NOTEQUALS       reduce using rule 55 (empty -> .)
    AND             reduce using rule 55 (empty -> .)
    OR              reduce using rule 55 (empty -> .)
    COMMA           reduce using rule 55 (empty -> .)

    expression                     shift and go to state 36
    type                           shift and go to state 25
    function_call                  shift and go to state 26
    empty                          shift and go to state 27

state 22

    (11) print_statement -> PRINT LPAREN expression . RPAREN
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . MINUS expression
    (33) expression -> expression . MULTIPLY expression
    (34) expression -> expression . DIVIDE expression
    (35) expression -> expression . GREATERTHAN expression
    (36) expression -> expression . LESSTHAN expression
    (37) expression -> expression . EQUALS expression
    (38) expression -> expression . NOTEQUALS expression
    (39) expression -> expression . AND expression
    (40) expression -> expression . OR expression
    (41) expression -> expression . COMMA expression

    RPAREN          shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MULTIPLY        shift and go to state 40
    DIVIDE          shift and go to state 41
    GREATERTHAN     shift and go to state 42
    LESSTHAN        shift and go to state 43
    EQUALS          shift and go to state 44
    NOTEQUALS       shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    COMMA           shift and go to state 48


state 23

    (43) expression -> NOT . expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression LESSTHAN expression
    (37) expression -> . expression EQUALS expression
    (38) expression -> . expression NOTEQUALS expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression COMMA expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . NOT expression
    (44) expression -> . VARIABLE
    (45) expression -> . type
    (46) expression -> . function_call
    (47) expression -> . empty
    (48) type -> . BOOL
    (49) type -> . DECIMAL
    (50) type -> . WSTRING
    (51) function_call -> . VARIABLE LPAREN function_arguments RPAREN
    (55) empty -> .

    LPAREN          shift and go to state 21
    NOT             shift and go to state 23
    VARIABLE        shift and go to state 24
    BOOL            shift and go to state 28
    DECIMAL         shift and go to state 29
    WSTRING         shift and go to state 30
    PLUS            reduce using rule 55 (empty -> .)
    MINUS           reduce using rule 55 (empty -> .)
    MULTIPLY        reduce using rule 55 (empty -> .)
    DIVIDE          reduce using rule 55 (empty -> .)
    GREATERTHAN     reduce using rule 55 (empty -> .)
    LESSTHAN        reduce using rule 55 (empty -> .)
    EQUALS          reduce using rule 55 (empty -> .)
    NOTEQUALS       reduce using rule 55 (empty -> .)
    AND             reduce using rule 55 (empty -> .)
    OR              reduce using rule 55 (empty -> .)
    COMMA           reduce using rule 55 (empty -> .)
    RPAREN          reduce using rule 55 (empty -> .)
    PRINT           reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    FUNC            reduce using rule 55 (empty -> .)
    LET             reduce using rule 55 (empty -> .)
    VAR             reduce using rule 55 (empty -> .)
    $end            reduce using rule 55 (empty -> .)
    RBRACES         reduce using rule 55 (empty -> .)
    RSQUAREBRACKET  reduce using rule 55 (empty -> .)
    RETURN          reduce using rule 55 (empty -> .)
